--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ICON</title>
     <link rel="stylesheet" href="icon_style.css">
   </head>
   <body>
